--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -178,8 +178,12 @@ $item-thumbnail-size: 90px
 		&-action
 			margin-left: auto
 
-			.btn
-				margin-left: 10px
+			.btn-group
+				margin-left: 5px
+		.item-status
+			color: $color-text-hint
+			span
+				padding-left: 5px
 
 	&-form
 		form
