--- a/src/styles/_list.sass
+++ b/src/styles/_list.sass
@@ -8,8 +8,7 @@ ul.list-hits
 		height: 100%
 		background-color: $color-background-light
 		border-radius: 3px
-		box-shadow: 1px 2px 2px $color-background-dark
-
+		box-shadow: 1px 2px 2px $color-background-dark, inset -5px 0 0  $color-background-dark
 		padding-right: 5px
 		+clearfix
 
